--- a/one.yml
+++ b/one.yml
@@ -1,17 +1,7 @@
-- name: Setup
+# This is my master to connect
+- name: setup
   hosts: all
   sudo: true
-  tasks:
-  - name: Add ansible user
-    user:
-      name: ansible
-      state: present
-      generate_ssh_key: true
-  - name: Ensure that NTP is available
-    apt:
-      name: ntp 
-      state: present
-  - name: Ensure that NTP service is Started
-    service:
-      name: ntp
-      state: started
+  roles: 
+  - role
+ # tasks:
