--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,11 @@ install:
 
 script:
   # Basic role syntax check
-  - echo "starting test"
+  - echo "starting the test role"
+  - cd roles/role
+# doing a simple syntax check of the role
   - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
+# Now we try to execute the role under test condition
   - ansible-playbook tests/test.yml -i tests/inventory
 
 notifications:
