--- a/.travis.yml
+++ b/.travis.yml
@@ -24,11 +24,12 @@ install:
 script:
   # Basic role syntax check
   - echo "starting the test role"
-  - cd roles/role
+#  - cd roles/role
 # doing a simple syntax check of the role
-  - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
+#  - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
+  - ansible-playbook -i inventory one.yml --syntax-check
 # Now we try to execute the role under test condition
-  - ansible-playbook tests/test.yml -i tests/inventory
+#  - ansible-playbook tests/test.yml -i tests/inventory
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
