--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ script:
 # doing a simple syntax check of the role
 #  - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
   - ansible-playbook -i inventory one.yml --syntax-check
+  - ansible-playbook -i inventory one.yml 
 # Now we try to execute the role under test condition
 #  - ansible-playbook tests/test.yml -i tests/inventory
 
